<resources>
    <string name="app_name">Android Podcaster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Theme</string>
    <string name="podcasts">Podcasts</string>
    <string name="player">Player</string>
    <string name="downloaded">Downloaded</string>
    <string name="in_progress">Continue Episode</string>
    <string name="radio">Radio</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jre">JRE</string>
    <string name="long_desc">Long desc...</string>
    <string name="stringPodName">Pod Name</string>
    <string name="stringEpisodeName">Episode Name</string>
    <string name="stringDate">Date</string>
    <string name="file_size">File Size</string>
    <string name="currtime">CurrTime</string>
    <string name="totaltime">TotalTime</string>
    <string name="stringEpisodeDesc">Default text</string>
    <string name="now_playing">Now Playing</string>
    <string name="ep_nr_and_title">Ep nr and Title</string>
    <string name="podcast_title">Podcast title</string>
    <string name="stations_namn">Station Name</string>
    <string name="finished_loading">finished-loading</string>
    <string name="song_completed">song-completed</string>
    <string name="audio_player_error">Audio Player error</string>
    <string name="playingPod">playingPod</string>
    <string name="media">media</string>
    <string name="downloading_episode">Downloading episode..</string>
    <string name="downloading">Downloading..</string>
    <string name="downloaded_episodes">downloaded_episodes</string>
    <string name="successfully_downloaded">succesfully downloaded</string>
    <string name="Under_Huden">Under Huden</string>
    <string name="Revisionist">Revisionist</string>
    <string name="loading_episodes">Loading episode..</string>
    <string name="loading">loading..</string>
    <string name="clicked_on">Clicked on</string>
    <string name="clicked_on_download">Clicked on download</string>
    <string name="stream_episode">Stream Episode</string>
    <string name="Podcast">Podcast</string>
    <string name="prepairing_station">Prepairing station..</string>
    <string name="latest_episodes">Latest episodes</string>
    <string name="data_ok">data_load_complete</string>
    <string name="latest_duration">latestDuration</string>
    <string name="itunes_not_avalible">Podcast not available</string>
    <string name="invalid_podcast">Podcast invalid - Cannot subscribe</string>
    <string name="searchLanguage">searchLanguage</string>
    <string name="fragment_cat_load">Loading category</string>
    <string name="search_podcasts">Search Podcasts</string>
    <string name="discover_podcasts">Discover Podcasts</string>
    <string name="setting_up_podcast">Setting up podcasts..</string>
    <string name="Loading">Loading</string>
    <string name="loading_results">Loading results</string>
    <string name="Comedy_cat">Comedy</string>
    <string name="film_cat">Film</string>
    <string name="science_cat">Science</string>
    <string name="tech_cat">Technology</string>
    <string name="business_cat">Business</string>
    <string name="games_cat">Games</string>
    <string name="education_cat">Education</string>
    <string name="politcs_cat">Politics</string>
    <string name="society_cat">Society</string>
    <string name="ep_sorted_by_date">Episodes sorted by date</string>
    <string name="ep_sorted_by_podcast">Episodes sorted by podcast</string>
    <string name="service_bound">Service Bound</string>
    <string name="landscape">landscape</string>
    <string name="portrait">portrait</string>
    <string name="first_time_message">You are using the app for the first time - first time sync will take some time</string>
    <string name="first_time_setup">First time setup</string>
    <string name="pausing_playback">Playback paused</string>
    <string name="resuming_playback">Playback continuing</string>
    <string name="network_offline_message">Network offline - Go to Downloaded Episodes</string>
    <string name="radio_stations_title">Radio Stations</string>
    <string name="no_pod_playing">No pod playing - pick an episode from the menu</string>
    <string name="Downloaded_episodes_title">Downloaded Episodes</string>
    <string name="Continue_episodes_title">Continue Episode</string>
    <string name="podcast_subscribed">Podcast Added!</string>
    <string name="show_ep_now_question">Show episodes now ?</string>
    <string name="no_thanks">No thanks</string>
    <string name="podcast_added_message">Podcast added - play from My list</string>
    <string name="select_list">Pick list</string>
    <string name="svenska_poddar">English Podcasts</string>
    <string name="engelska_poddar">English Podcasts</string>
    <string name="egen_lista">My List</string>
    <string name="stop_clicking">Loading..</string>
    <string name="streaming">Streaming..</string>
    <string name="loading_station">Loading Stations</string>
    <string name="streamar_avsnitt">Streaming episode..</string>
    <string name="cannot_remove_this_ep">Cannot remove episode</string>
    <string name="episode_removed">Episode removed :</string>
    <string name="ep_removed_colon">Episode removed :</string>
    <string name="Loading_episodes_title">Loading episode</string>
    <string name="updating">Updating..</string>
    <string name="theme_set_text">Theme set to</string>
    <string name="theme">Theme</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="remove_episode">Remove episode</string>
    <string name="search_podcast">Search Podcast</string>
</resources>
