<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/podcasts" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_play_circle_outline_black_24dp"
            android:title="@string/player" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/radio" />
        <item
            android:id="@+id/nav_downloaded"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/downloaded" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/in_progress" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/latest_episodes"
            />


        <item
            android:id="@+id/nav_tab_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_podcasts" />
    </group>


</menu>
